# id-pirated-vid

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.Boost.txt  CMakeLists.Eigen.txt  CMakeLists.Raft.txt  CMakeLists.dependencies  CMakeLists.txt  CMakeLists.txt.benchmark  CMakeLists.txt.googletest  LICENSE.txt  Makefile  README.md  Vagrantfile  add.cxx  allresults.pkl  allresults.txt  bench.cxx  cmake_install.cmake  file.txt  keyframes.cxx  main  main.cxx  matcher.cxx  piracy.py  provisionVM.sh  query.cxx  requirements.txt  resultcache.txt  test.py  viewer.py
.github/disabled_workflows/: testattacks.yml
.github/workflows/: ccpp.yml  testattacks.yml
include/: bow.hpp  classifier.hpp  concepts.hpp  database.hpp  database_iface.hpp  filter.hpp  frame.hpp  fs_compat.hpp  imgproc.hpp  instrumentation.hpp  kernel.hpp  keyframes.hpp  kmeans2.hpp  matcher.hpp  matrix.hpp  scene.hpp  scene_detector.hpp  storage.hpp  subset.hpp  sw.hpp  video.hpp  vocab_type.hpp  vocabulary.hpp
python/: add.py  attack_vid_labels.py  deboxer.py  deboxer2.py  experiment.py  gen_testvids.py  graphs.py  logfile.py  make_report.py  piracy.py  pirater.py  previewer.py  scrape_adcouncil.py  segmenter.py  subimage_detector.py  tester.py  viewer.py
src/: CMakeLists.txt  bow.cpp  database.cpp  filter.cpp  instrumentation.cpp  kernel.cpp  kmeans2.cpp  matcher.cpp  matrix.cpp  storage.cpp
tests/: CMakeLists.dependencies  CMakeLists.txt  CMakeLists.txt.googletest  classifier_test.cpp  database_benchmark.cpp  database_test.cpp  query_test.cpp  scene_test.cpp  sw_benchmark.cpp  sw_profile.cxx  sw_test.cpp
